# gerenciador_financeiro

./: .env.example  .gitignore  Makefile  README.md  TECHNICAL_SUMMARY.md  backend_app.py  docker-compose.prod.yml  docker-compose.yml  temp_lines.txt  temp_patch.txt  test-system.sh
backend/: .env.example  Dockerfile  __init__.py  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt  temp_edit.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_migration.py  20251112_0920_b286d44320bc_rename_tables_ptbr.py
backend/app/: __init__.py  main.py
backend/app/core/: config.py  deps.py  security.py
backend/app/db/: database.py  session.py  types.py
backend/app/models/: __init__.py  _enum_utils.py  account.py  budget.py  category.py  recurring_rule.py  transaction.py  user.py
backend/app/routers/: accounts.py  auth.py  budgets.py  categories.py  dashboard.py  transactions.py  users.py
backend/app/schemas/: __init__.py  account.py  auth.py  budget.py  category.py  dashboard.py  recurring_rule.py  transaction.py  user.py
backend/app/services/: demo_data.py
backend/app/utils/: locale_mapper.py  pagination.py
backend/scripts/: init-db.sql  seed_data.py
docs/: convencoes-portugues.md
frontend/: Dockerfile  docker-entrypoint.sh  nginx.conf
frontend/finance-manager-web/: index.html  package.json
frontend/finance-manager-web/public/templates/: import-transacoes-template.xlsx
frontend/finance-manager-web/src/: App.jsx
frontend/finance-manager-web/src/components/layout/: AppLayout.jsx
frontend/finance-manager-web/src/components/ui/: loading-spinner.jsx
frontend/finance-manager-web/src/contexts/: ApiContext.jsx  AuthContext.jsx
frontend/finance-manager-web/src/hooks/: use-toast.js  useApi.js
frontend/finance-manager-web/src/lib/: api-locale.js  notifications.js
frontend/finance-manager-web/src/lib/formatters/: index.js
frontend/finance-manager-web/src/pages/: AccountsPage.jsx  BudgetsPage.jsx  CategoriesPage.jsx  DashboardPage.jsx  DashboardPageReal.jsx  LoginPage.jsx  ReportsPage.jsx  SettingsPage.jsx  TransactionsPage.jsx
